# PRE

webServer/: server.js
webServer/public/: script.js  webPage.html
webServer/public/scripts/: script.js
webServer/public/styles/: myStyle.css
zbServer/: CMakeLists.txt  databaseTest.cpp  main.cpp  zbclient.cpp  zbserver.cpp
zbServer/utils/: database.cpp  database.h  utils.cpp  utils.h  zigbee_api.cpp  zigbee_api.h
